fixed alignments and margin of contents

--- a/src/Components/PinnedScroll/style.css
+++ b/src/Components/PinnedScroll/style.css
@@ -20,7 +20,9 @@
     justify-content: center;
 }
 .details{
-    height: 200vh;
+
+    height: 200%;
+    width: 50%;
     /* margin: 800px 0; */
     display: flex;
     flex-direction: column;
@@ -30,6 +32,7 @@
     width: 100%;
     gap: 2rem;
     /* border: 2px solid red; */
+    padding-bottom: 300px;
 }
 
 .Section-info-text{
@@ -53,6 +56,7 @@
 .Section-info-text p {
    font-size: 2rem;
     line-height: 1.5;
+    color: #000;
     
 }
 
@@ -149,6 +153,6 @@
 }
 .image{
     background: green;
-    height: 80vh;
+    height: 80%;
     width: 650px;
 }
